[gd_scene load_steps=4 format=3 uid="uid://c07by706dteba"]

[ext_resource type="Script" path="res://scenes/shop_item.gd" id="1_frmrg"]
[ext_resource type="Texture2D" uid="uid://cq5jlgljteo4e" path="res://ui/items/grid_element.png" id="2_pxabc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_m0gnc"]

[node name="ShopItem" type="Panel"]
custom_minimum_size = Vector2(75, 75)
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
script = ExtResource("1_frmrg")

[node name="CenterContainer" type="CenterContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("2_pxabc")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_m0gnc")
expand_mode = 1

[node name="StatPanel" type="Panel" parent="."]
visible = false
z_index = 1
layout_mode = 2
offset_left = 25.0
offset_top = -174.0
offset_right = 147.0
offset_bottom = 8.0

[node name="StatSheet" type="GridContainer" parent="StatPanel"]
layout_mode = 0
offset_right = 121.0
offset_bottom = 130.0

[node name="Stat" type="Label" parent="StatPanel/StatSheet"]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
